# DjangoProjects

./: docker-compose.yml
alwazah/: Dockerfile  manage.py  requirements.txt
alwazah/alwazah/: asgi.py  settings.py  urls.py  wsgi.py
alwazah/tasks/: models.py  urls.py  views.py
alwazah/templates/: base.html
alwazah/users/: urls.py  views.py
cbserializer/: Dockerfile  manage.py  requirements.txt
cbserializer/cbserializer/: asgi.py  settings.py  urls.py  wsgi.py
cbserializer/snippet/: models.py  serializers.py  urls.py  views.py
kwin/: Dockerfile  manage.py  requirements.txt
kwin/authentication/: decorators.py  models.py  urls.py  views.py
kwin/customers/: forms.py  models.py  urls.py  views.py
kwin/kwin/: asgi.py  settings.py  urls.py  wsgi.py
kwin/pages/: urls.py  views.py
kwin/products/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
kwin/templates/: base.html
kwin/users/: urls.py  views.py
locallibrary/: Dockerfile  pyproject.toml  run.sh
locallibrary/catalog/: admin.py  models.py  views.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_language_alter_book_options_and_more.py
locallibrary/locallibrary/: settings.py  urls.py
locallibrary/templates/: base.html
locallibrary/templates/catalog/: author_detail.html  author_list.html  book_detail.html  book_list.html  index.html
portfolio/: Dockerfile  requirements.txt
portfolio/base/: urls.py  views.py
portfolio/pages/: urls.py
portfolio/portfolio/: asgi.py  settings.py
serializer/: Dockerfile  requirements.txt
todoapp/: Dockerfile
(+62 files in other folders)
